<resources>
    <string name="app_name">Demo Shopping</string>
    <string name="no_internet_msg">No Network Access</string>
    <string name="app_close_alert">Please press <b>BACK</b> again to exit</string>
    <string name="something_went_wrong_pls_try_again">Something went wrong. Please try again !!</string>
    <string name="enter_email_address">Enter the email address associated with your \naccount.We will send you a link to reset your \npassword</string>
    <string name="category">Category</string>
    <string name="search_product">Search Product</string>
    <string name="for_her">For Her</string>
    <string name="for_him">For Him</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="hello">Hello!</string>
    <string name="hello_caption">Have a nice day</string>
    <string name="old_price">Old Price</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="discount">25% OFF</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_caption">Welcome to Privately Urs!</string>
    <string name="password">Password</string>
    <string name="lost_password">Lost your password?</string>
    <string name="new_user">NewUser</string>
    <string name="create_account">CreateAccount</string>
    <string name="profile_details">Profile Details</string>
    <string name="order_details">Order Details</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="product_details">Product Details</string>
    <string name="wishlist">Wishlist</string>
    <string name="special_offers">Special Offers</string>
    <string name="address_book">Address Book</string>
    <string name="account">Account</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="alt_mob_number">Alternate Mobile Number</string>
    <string name="change_password">Change Password</string>
    <string name="save_details">Save Details</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="addrress_book">Address Book</string>
</resources>