<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.example.privatelyurs.ui.fragment.forgetpassword.ForgotPasswordViewModel" />
    </data>


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundcolor">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forget_image"
            android:src="@drawable/forgetpassword_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_90sdp"/>

        <com.example.privatelyurs.ui.customview.CustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_text"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:layout_below="@+id/forget_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_30sdp"/>

        <com.example.privatelyurs.ui.customview.CustomTextview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_text_descp"
            android:text="@string/enter_email_address"
            android:textColor="@color/gray"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"
            android:layout_below="@+id/forgot_text"
            android:layout_marginTop="@dimen/_30sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_layout"
            android:orientation="vertical"
            android:layout_below="@+id/forgot_text_descp">

            <com.example.privatelyurs.ui.customview.CustomTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/gray"
                android:textSize="@dimen/_13sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"/>

            <com.example.privatelyurs.ui.customview.CustomEdittext
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/editshape_background"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:text="@={viewmodel.strEmailLogin}"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"/>

        </LinearLayout>

        <com.example.privatelyurs.ui.customview.CustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_below="@+id/email_layout"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:background="@drawable/signinbutton_background_shape"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_50sdp"
            android:paddingRight="@dimen/_50sdp"
            android:layout_gravity="center"
            android:onClick="@{() -> viewmodel.callPasswordReset()}"
            android:layout_marginTop="@dimen/_60sdp"/>

    </RelativeLayout>

</layout>

