<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.login.LoginFragment">

    <data>
        <variable
            name="viewmodel"
            type="com.example.privatelyurs.ui.fragment.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_back_image">

        <com.example.privatelyurs.ui.customview.CustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signin_text"
            android:text="@string/sign_in"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_50sdp"/>

        <com.example.privatelyurs.ui.customview.CustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome_text"
            android:layout_below="@id/signin_text"
            android:text="@string/signin_caption"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_3sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/welcome_text"
            android:background="@drawable/shape_onlyborder"
            android:layout_marginTop="@dimen/_150sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <com.example.privatelyurs.ui.customview.CustomEdittext
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/editshape_background"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@={viewmodel.strEmailLogin}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"/>

                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:id="@+id/tv_error_email_msz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="-7dp"
                    android:paddingLeft="@dimen/_20sdp"
                    app:mutableText="@{viewmodel.localEmailErrorMessage}"
                    android:visibility="gone"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/_13sdp" />


                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_15sdp"
                    android:paddingLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <com.example.privatelyurs.ui.customview.CustomEdittext
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/editshape_background"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.strpassword}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"/>

                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:id="@+id/tv_error_email_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_20sdp"
                    app:mutableText="@{viewmodel.localPassErrorMessage}"
                    android:visibility="gone"
                    android:layout_marginBottom="-14dp"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/_13sdp" />


                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_password"
                    android:textColor="@color/pink"
                    android:textSize="@dimen/_15sdp"
                    android:layout_gravity="end"
                    android:onClick="@{() -> viewmodel.passwordRetrieve()}"
                    android:paddingRight="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/white"
                    android:background="@drawable/signinbutton_background_shape"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_50sdp"
                    android:paddingRight="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:onClick="@{() -> viewmodel.callLogin()}"
                    android:layout_marginTop="@dimen/_30sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_40sdp"
                android:gravity="center">

                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textSize="@dimen/_15sdp"/>

                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textSize="@dimen/_15sdp"
                    android:textColor="@color/pink"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>


