<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_onlyborder">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:id="@+id/item_image"
            android:layout_height="@dimen/_150sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            android:elevation="@dimen/_15sdp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/roundedImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/login_back_image"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    />

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:id="@+id/iv_select"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/circle_background"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/heart_selected" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_shape"
            android:layout_marginTop="@dimen/_130sdp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_30sdp">

            <com.example.privatelyurs.ui.customview.CustomTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_name"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_3sdp">

                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:id="@+id/tv_item_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <com.example.privatelyurs.ui.customview.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_oldprice_text"
                    android:text="@string/old_price"
                    android:background="@drawable/strike_through"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_9sdp"
                    android:layout_marginStart="@dimen/_8sdp"/>

            </LinearLayout>

            <com.example.privatelyurs.ui.customview.CustomTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_disc_text"
                android:text="@string/discount"
                android:textColor="@color/pink"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                android:paddingTop="@dimen/_3sdp"/>


        </LinearLayout>

    </RelativeLayout>

</layout>
