<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.example.privatelyurs.ui.fragment.profile.ProfileFragmentViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_rl_layout"
        android:background="@color/backgroundcolor">

        <com.example.privatelyurs.ui.customview.CustomTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_text"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textSize="@dimen/_25sdp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_170sdp"
            android:layout_below="@+id/account_text"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/ic_profile_image_placeholder"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:civ_border_color="@color/gray"
            app:civ_border_width="1dp" />

        <com.example.privatelyurs.ui.customview.CustomTextview
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_below="@+id/iv_profile_image"
            android:layout_centerHorizontal="true"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image_rl_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_20sdp"
            android:weightSum="1">

            <com.example.privatelyurs.ui.customview.CustomTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_details"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:layout_weight=".90"
                android:onClick="@{() -> viewmodel.callProfileDetails()}"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow_blue"
                android:layout_weight=".10"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/backgroundcolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_20sdp"
            android:weightSum="1">

            <com.example.privatelyurs.ui.customview.CustomTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orders"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:layout_weight=".90"
                android:onClick="@{() -> viewmodel.callOrders()}"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow_blue"
                android:layout_weight=".10"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/backgroundcolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_20sdp"
            android:weightSum="1">

            <com.example.privatelyurs.ui.customview.CustomTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wishlist"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:layout_weight=".90"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow_blue"
                android:layout_weight=".10"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/backgroundcolor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_20sdp"
            android:weightSum="1">

            <com.example.privatelyurs.ui.customview.CustomTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_book"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/black"
                android:layout_weight=".90"
                android:onClick="@{() -> viewmodel.callAddressBook()}"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_right_arrow_blue"
                android:layout_weight=".10"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/backgroundcolor" />

    </LinearLayout>

    </RelativeLayout>

</layout>