<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       android:layout_margin="@dimen/_10sdp"
        android:weightSum="1">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_80sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            android:elevation="@dimen/_10sdp"
            android:layout_weight="0.1">

            <ImageView
                android:id="@+id/roundedImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/login_back_image"
                android:background="@color/white"
                android:scaleType="fitXY"
                />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="0.88">

            <com.example.DemoShopping.ui.customview.CustomTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_delivery"
                android:text="Delivered on 14 feb,2021"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/pink"/>

            <com.example.DemoShopping.ui.customview.CustomTextview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_item_name"
                android:text="@string/name"
                android:paddingTop="@dimen/_3sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_3sdp">

                <com.example.DemoShopping.ui.customview.CustomTextview
                    android:id="@+id/tv_item_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <com.example.DemoShopping.ui.customview.CustomTextview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_oldprice_text"
                    android:text="@string/old_price"
                    android:background="@drawable/strike_through"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_9sdp"
                    android:layout_marginStart="@dimen/_8sdp"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_right_arrow_blue"
            android:layout_weight="0.02"/>


    </LinearLayout>

</layout>
